[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pswiki-mcp"
version = "0.1.0"
description = "MCP server for PS-Wiki - Power Systems terminology and knowledge base"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "PS-Wiki Contributors", email = "jinninggm@gmail.com"}
]
keywords = ["mcp", "power-systems", "wiki", "terminology", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://ps-wiki.github.io"
Documentation = "https://ps-wiki.github.io"
Repository = "https://github.com/ps-wiki/ps-wiki.github.io"
"Bug Tracker" = "https://github.com/ps-wiki/ps-wiki.github.io/issues"

[project.scripts]
pswiki-mcp = "pswiki_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pswiki_mcp"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
